# ScrapySplashWrapper

./: LICENSE  Pipfile  README.md  Readme  mypy.ini  pyproject.toml  requirements.txt  setup.py
.github/workflows/: nosetests.yml
docs/source/: api_reference.rst  conf.py  index.rst
scrapysplashwrapper/: __init__.py  crawl.lua  crawler.py  exceptions.py  middleware.py
