[tool.poetry]
name = "scrapysplashwrapper"
version = "1.5.0"
description = "Scrapy splash wrapper as a standalone library."
authors = ["Raphaël Vinot <raphael.vinot@circl.lu>"]
license = "BSD-3-Clause"
repository = "https://github.com/Lookyloo/ScrapySplashWrapper"
readme = "README.md"
documentation = "https://scrapysplashwrapper.readthedocs.io/en/latest/"

classifiers=[
    'License :: OSI Approved :: BSD License',
    'Environment :: Console',
    'Intended Audience :: Science/Research',
    'Intended Audience :: Telecommunications Industry',
    'Programming Language :: Python :: 3',
    'Topic :: Security',
    'Topic :: Internet',
]

include = ['README.md']

[tool.poetry.scripts]
scraper = "scrapysplashwrapper:main"

[tool.poetry.dependencies]
python = "^3.8"
scrapy-splash = "^0.7.2"
Scrapy = "^2.4.1"
Sphinx = { version = "^3.5.3", optional = true }
myst-parser = { version = ">=0.13.5,<0.15.0", optional = true }

[tool.poetry.dev-dependencies]
mypy = "^0.812"
ipython = "^7.23.1"

[tool.poetry.extras]
docs = ["Sphinx", "myst-parser"]

[build-system]
requires = ["poetry_core>=1.0", "setuptools"]
build-backend = "poetry.core.masonry.api"
