[tool.poetry]
name = "scrapysplashwrapper"
version = "1.7.0"
description = "Scrapy splash wrapper as a standalone library."
authors = ["Raphaël Vinot <raphael.vinot@circl.lu>"]
license = "BSD-3-Clause"
repository = "https://github.com/Lookyloo/ScrapySplashWrapper"
readme = "README.md"
documentation = "https://scrapysplashwrapper.readthedocs.io/en/latest/"

classifiers=[
    'License :: OSI Approved :: BSD License',
    'Environment :: Console',
    'Intended Audience :: Science/Research',
    'Intended Audience :: Telecommunications Industry',
    'Programming Language :: Python :: 3',
    'Topic :: Security',
    'Topic :: Internet',
]

include = ['README.md']

[tool.poetry.scripts]
scraper = "scrapysplashwrapper:main"

[tool.poetry.dependencies]
python = "^3.8"
scrapy-splash = "^0.7.2"
Scrapy = "^2.5.0"
Sphinx = { version = "^4.1.1", optional = true }

[tool.poetry.dev-dependencies]
mypy = "^0.910"
ipython = "^7.25.0"

[tool.poetry.extras]
docs = ["Sphinx", "myst-parser"]

[build-system]
requires = ["poetry_core>=1.0", "setuptools"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_any_generics = true
python_version = 3.8
ignore_errors = false
ignore_missing_imports = false
strict_optional = true
no_implicit_optional = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unreachable = true

show_error_context = true
pretty = true

[[tool.mypy.overrides]]
module = "docs.source.*"
ignore_errors = true
